# douban-cli

./: README.md  _chart.html  _later.html  douban-movie.skill  pyproject.toml
.agents/skills/douban-movie/: SKILL.md
src/: main.py
